--- a/GeneralForm.resx
+++ b/GeneralForm.resx
@@ -128,7 +128,9 @@ Navigate Filtered Listbox using up/down arrow keys.
 
 Select Staff member by pressing enter.
 
-Open Admin Form (Alt + A)</value>
+Open Admin Form (Alt + A)
+
+Move from ID textbox to listbox (Shift + Tab) </value>
   </data>
   <metadata name="statusstripGeneralForm.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
